完成添加http功能
